# visual-qc-inspector

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  ROADMAP.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.yaml
config/profiles/: generic.yaml  packaging.yaml  pcb.yaml
docs/: calibracion-perfiles.md
eval/: README.md  labels.yaml  run_eval.py
src/: alerter.py  analyzer.py  capture.py  dashboard.py  decision.py  frame_selector.py  preprocessor.py  reporter.py  storage.py  worker.py
templates/: report.html
tests/: test_alerter.py  test_analyzer.py  test_capture.py  test_decision.py  test_main.py  test_storage.py  test_worker.py
